--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link href="css/main.css" rel="stylesheet" type="text/css" /
+	<link href="css/main.css" rel="stylesheet" type="text/css" />
 	
 </head>
 <body>
